[tool.poetry]
name = "fastapi-forum"
version = "0.1.0"
description = ""
authors = ["On1muZ <durnovarsenij@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
fastui = "^0.5.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
alembic = "^1.13.1"
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"
uvicorn = "^0.28.0"
pyjwt = "^2.8.0"
passlib = "^1.7.4"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
